--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <div class="row">
                 <div class="col-md-12">
             <h1>Невідома сторона трикутника</h1>
-            <img src="https://shkolkovo.net/media/upload/task_images/118/theory_00_07_1.png"><br>
+            <div class="triangle"></div>
   Введіть сторону А: 
   <input type="number" id = "var_a">
   <br>
-  Введіть сторону Б: 
+  Введіть сторону Б:
   <input type="number" id = "var_b">
   <br>
             <div class="calc" style="text-align: center">
