--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="row">
                 <div class="col-md-12">
             <h1>Невідома сторона трикутника</h1>
+                    Варіант 5 - знаходження катета
             <div class="triangle"></div>
   Введіть сторону А: 
   <input type="number" id = "var_a">
